--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -92,7 +92,7 @@ button {
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url(../img/bg.jpg);
+    background-image: url(../static/img/bg.jpg);
     background-size: cover;
     transition: -webkit-transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out;
